atualização do material

--- a/notebooks/06 - Modelagem - OneToOne.ipynb
+++ b/notebooks/06 - Modelagem - OneToOne.ipynb
@@ -5,7 +5,7 @@
    "id": "d65f76bd",
    "metadata": {},
    "source": [
-    "# Notebook responsável por alguns aspectos de modelagem OneToOne / OneToFew Embedding (usando MongoEngine)"
+    "# Notebook responsável por alguns aspectos de modelagem OneToOne / OneToFew Linking (usando MongoEngine)"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Endereco (EmbeddedDocument):\n",
+    "class Endereco (Document):\n",
     "    logradouro = StringField(max_length=200, required=True)\n",
     "    numero = StringField(max_length=10, required=True)\n",
     "    bairro = StringField(max_length=50, required=True)\n",
@@ -71,7 +71,9 @@
     "    formacoes = ListField(StringField(max_length=50), max_length=4)\n",
     "    \n",
     "    # Referência (linking) para um objeto da classe pessoa\n",
-    "    endereco = EmbeddedDocumentField(Endereco)\n",
+    "    # ref.:https://mongoengine-odm.readthedocs.io/apireference.html#documents\n",
+    "    #endereco = ReferenceField(Endereco, reverse_delete_rule=DENY)\n",
+    "    endereco = ReferenceField(Endereco, reverse_delete_rule=DENY)\n",
     "    \n",
     "    def __str__(self):\n",
     "        return f\"{self.pk}, {self.cpf}, {self.primeiro_nome}, Endereço: {self.endereco}\"\n"
@@ -197,7 +199,7 @@
     }
    ],
    "source": [
-    "connect('onetoone_embedding')"
+    "connect('onetoone_linking')"
    ]
   },
   {
@@ -218,16 +220,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Pessoa: None, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>,\n",
-      " <Pessoa: None, 256.748.901-02, Leandro, Endereço: Trecho Enzo Ramos, 14>,\n",
-      " <Pessoa: None, 462.971.308-50, Clarice, Endereço: Morro de Novaes, 31>,\n",
-      " <Pessoa: None, 652.973.408-29, Lorena, Endereço: Ladeira Paulo da Cunha, 846>,\n",
-      " <Pessoa: None, 167.803.925-02, Agatha, Endereço: Estrada de Cavalcanti, 6>,\n",
-      " <Pessoa: None, 764.509.823-65, Lucas Gabriel, Endereço: Quadra Nicole Ribeiro, 5>,\n",
-      " <Pessoa: None, 153.264.780-80, Juliana, Endereço: Quadra Ana Lívia da Paz, 10>,\n",
-      " <Pessoa: None, 240.687.139-87, Vinicius, Endereço: Área Marcela Cavalcanti, 14>,\n",
-      " <Pessoa: None, 692.410.358-89, Rodrigo, Endereço: Lago Mariana Campos, 68>,\n",
-      " <Pessoa: None, 158.236.970-40, Emanuel, Endereço: Morro Pires, 39>]\n"
+      "[<Pessoa: None, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>,\n",
+      " <Pessoa: None, 032.658.491-98, Yuri, Endereço: Condomínio de Viana, 94>,\n",
+      " <Pessoa: None, 428.530.179-23, Nathan, Endereço: Ladeira Ana Luiza Melo, 60>,\n",
+      " <Pessoa: None, 583.492.760-29, Otávio, Endereço: Favela de da Costa, 4>,\n",
+      " <Pessoa: None, 703.269.148-03, Enzo, Endereço: Viaduto Martins, 72>,\n",
+      " <Pessoa: None, 341.286.059-05, Benjamin, Endereço: Fazenda de Souza, 47>,\n",
+      " <Pessoa: None, 730.469.815-20, Clarice, Endereço: Estrada da Cruz, 8>,\n",
+      " <Pessoa: None, 930.651.248-15, Davi Lucas, Endereço: Via de Costa, 38>,\n",
+      " <Pessoa: None, 451.793.086-66, Danilo, Endereço: Condomínio Mendes, 26>,\n",
+      " <Pessoa: None, 582.907.346-38, Vicente, Endereço: Trecho Gabriel Barros, 38>]\n"
      ]
     }
    ],
@@ -275,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "<Pessoa: 625f455401e31f0f776785f0, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>"
+       "<Pessoa: 625f4c518aa345c91185abea, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>"
       ]
      },
      "execution_count": 9,
@@ -285,6 +287,7 @@
    ],
    "source": [
     "# inserindo 1 documento apenas\n",
+    "lista_pessoas[0].cascade_save()\n",
     "lista_pessoas[0].save()"
    ]
   },
@@ -298,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f455401e31f0f776785f0')\n"
+      "ObjectId('625f4c518aa345c91185abea')\n"
      ]
     }
    ],
@@ -309,31 +312,32 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e269e5c-3aae-4180-84c6-f0d89d8a8dd7",
+   "id": "926c6d54",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<Pessoa: 625f455701e31f0f776785f1, 256.748.901-02, Leandro, Endereço: Trecho Enzo Ramos, 14>,\n",
-       " <Pessoa: 625f455701e31f0f776785f2, 462.971.308-50, Clarice, Endereço: Morro de Novaes, 31>,\n",
-       " <Pessoa: 625f455701e31f0f776785f3, 652.973.408-29, Lorena, Endereço: Ladeira Paulo da Cunha, 846>,\n",
-       " <Pessoa: 625f455701e31f0f776785f4, 167.803.925-02, Agatha, Endereço: Estrada de Cavalcanti, 6>,\n",
-       " <Pessoa: 625f455701e31f0f776785f5, 764.509.823-65, Lucas Gabriel, Endereço: Quadra Nicole Ribeiro, 5>,\n",
-       " <Pessoa: 625f455701e31f0f776785f6, 153.264.780-80, Juliana, Endereço: Quadra Ana Lívia da Paz, 10>,\n",
-       " <Pessoa: 625f455701e31f0f776785f7, 240.687.139-87, Vinicius, Endereço: Área Marcela Cavalcanti, 14>,\n",
-       " <Pessoa: 625f455701e31f0f776785f8, 692.410.358-89, Rodrigo, Endereço: Lago Mariana Campos, 68>,\n",
-       " <Pessoa: 625f455701e31f0f776785f9, 158.236.970-40, Emanuel, Endereço: Morro Pires, 39>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ObjectId('625f4c518aa345c91185abe9')\n"
+     ]
     }
    ],
    "source": [
+    "pp.pprint(lista_pessoas[0].endereco.pk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8e269e5c-3aae-4180-84c6-f0d89d8a8dd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# inserindo todos os outros documentos\n",
-    "Pessoa.objects.insert(lista_pessoas[1:])"
+    "for p in lista_pessoas[1:]:\n",
+    "    p.cascade_save()\n",
+    "    p.save()"
    ]
   },
   {
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "36d993f5",
    "metadata": {},
    "outputs": [
@@ -362,16 +366,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f455401e31f0f776785f0')\n",
-      "ObjectId('625f455701e31f0f776785f1')\n",
-      "ObjectId('625f455701e31f0f776785f2')\n",
-      "ObjectId('625f455701e31f0f776785f3')\n",
-      "ObjectId('625f455701e31f0f776785f4')\n",
-      "ObjectId('625f455701e31f0f776785f5')\n",
-      "ObjectId('625f455701e31f0f776785f6')\n",
-      "ObjectId('625f455701e31f0f776785f7')\n",
-      "ObjectId('625f455701e31f0f776785f8')\n",
-      "ObjectId('625f455701e31f0f776785f9')\n"
+      "ObjectId('625f4c518aa345c91185abea')\n",
+      "ObjectId('625f4c528aa345c91185abec')\n",
+      "ObjectId('625f4c528aa345c91185abee')\n",
+      "ObjectId('625f4c528aa345c91185abf0')\n",
+      "ObjectId('625f4c528aa345c91185abf2')\n",
+      "ObjectId('625f4c528aa345c91185abf4')\n",
+      "ObjectId('625f4c528aa345c91185abf6')\n",
+      "ObjectId('625f4c528aa345c91185abf8')\n",
+      "ObjectId('625f4c528aa345c91185abfa')\n",
+      "ObjectId('625f4c528aa345c91185abfc')\n"
      ]
     }
    ],
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "ead155d5",
    "metadata": {},
    "outputs": [
@@ -390,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pessoa: 625f455401e31f0f776785f0, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>\n"
+      "<Pessoa: 625f4c518aa345c91185abea, 456.203.198-06, Lívia, Endereço: Viela Ana Aragão, 6>\n"
      ]
     }
    ],
@@ -401,33 +405,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7987ce5a",
+   "execution_count": 18,
+   "id": "0eb9c593",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ObjectId('625f4c518aa345c91185abe9')\n"
+     ]
+    }
+   ],
    "source": [
-    "pessoa.delete()"
+    "pp.pprint(pessoa.endereco.pk)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "87cee784",
+   "execution_count": 19,
+   "id": "99ba5229",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationError",
+     "evalue": "Could not delete document (Pessoa.endereco refers to it)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m endereco \u001b[38;5;241m=\u001b[39m Endereco\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m625f4c518aa345c91185abe9\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mfirst()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mendereco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/document.py:653\u001b[0m, in \u001b[0;36mDocument.delete\u001b[0;34m(self, signal_kwargs, **write_concern)\u001b[0m\n\u001b[1;32m    650\u001b[0m         \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\u001b[38;5;241m.\u001b[39mdelete()\n\u001b[1;32m    652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 653\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_qs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfilter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_object_key\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    654\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwrite_concern\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mwrite_concern\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_from_doc_delete\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m    655\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m pymongo\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mOperationFailure \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    657\u001b[0m     message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m err\u001b[38;5;241m.\u001b[39margs\n",
+      "File \u001b[0;32m~/Documentos/GitHub/techshot_mongo/techshot_mongo/lib/python3.9/site-packages/mongoengine/queryset/base.py:483\u001b[0m, in \u001b[0;36mBaseQuerySet.delete\u001b[0;34m(self, write_concern, _from_doc_delete, cascade_refs)\u001b[0m\n\u001b[1;32m    481\u001b[0m         refs \u001b[38;5;241m=\u001b[39m document_cls\u001b[38;5;241m.\u001b[39mobjects(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{field_name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__in\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m})\n\u001b[1;32m    482\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m refs\u001b[38;5;241m.\u001b[39mlimit(\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcount() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 483\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m OperationError(\n\u001b[1;32m    484\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not delete document (\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m refers to it)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    485\u001b[0m                 \u001b[38;5;241m%\u001b[39m (document_cls\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m, field_name)\n\u001b[1;32m    486\u001b[0m             )\n\u001b[1;32m    488\u001b[0m \u001b[38;5;66;03m# Check all the other rules\u001b[39;00m\n\u001b[1;32m    489\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m rule_entry, rule \u001b[38;5;129;01min\u001b[39;00m delete_rules:\n",
+      "\u001b[0;31mOperationError\u001b[0m: Could not delete document (Pessoa.endereco refers to it)"
+     ]
     }
    ],
    "source": [
-    "Pessoa.objects(id='625f455401e31f0f776785f0')"
+    "endereco = Endereco.objects(id='625f4c518aa345c91185abe9').first()\n",
+    "endereco.delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87cee784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pessoa.objects(id='625f48b63a1f265e4af5816b')"
    ]
   }
  ],
