--- a/notebooks/07 - Modelagem - OneToMany.ipynb
+++ b/notebooks/07 - Modelagem - OneToMany.ipynb
@@ -71,10 +71,10 @@
     "    formacoes = ListField(StringField(max_length=50), max_length=4)\n",
     "    \n",
     "    # Referência (linking) para um objeto da classe pessoa\n",
-    "    endereco = EmbeddedDocumentField(Endereco)\n",
+    "    enderecos = ListField(EmbeddedDocumentField(Endereco))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return f\"{self.pk}, {self.cpf}, {self.primeiro_nome}, Endereço: {self.endereco}\"\n"
+    "        return f\"{self.pk}, {self.cpf}, {self.primeiro_nome}, Endereço: {self.enderecos}\"\n"
    ]
   },
   {
@@ -133,13 +133,17 @@
     "    for i in range(n):\n",
     "        formacoes.append(fake.job())\n",
     "    \n",
-    "    endereco = criar_endereco()\n",
+    "    enderecos = []\n",
+    "    n = np.random.randint(1, 4)\n",
+    "    for i in range(n):\n",
+    "        enderecos.append(criar_endereco())\n",
+    "    \n",
     "    \n",
     "    pessoa = Pessoa(cpf=cpf, primeiro_nome=primeiro_nome, \n",
     "                    ultimo_nome=ultimo_nome, idade=idade, \n",
     "                    data_nascimento=data_nascimento, \n",
     "                    email=email, telefones=telefones, \n",
-    "                    formacoes=formacoes, endereco=endereco)\n",
+    "                    formacoes=formacoes, enderecos=enderecos)\n",
     "    return pessoa"
    ]
   },
@@ -197,7 +201,7 @@
     }
    ],
    "source": [
-    "connect('onetoone_embedding')"
+    "connect('onetomany_embedding')"
    ]
   },
   {
@@ -218,16 +222,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Pessoa: None, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>,\n",
-      " <Pessoa: None, 256.748.901-02, Leandro, Endereço: Trecho Enzo Ramos, 14>,\n",
-      " <Pessoa: None, 462.971.308-50, Clarice, Endereço: Morro de Novaes, 31>,\n",
-      " <Pessoa: None, 652.973.408-29, Lorena, Endereço: Ladeira Paulo da Cunha, 846>,\n",
-      " <Pessoa: None, 167.803.925-02, Agatha, Endereço: Estrada de Cavalcanti, 6>,\n",
-      " <Pessoa: None, 764.509.823-65, Lucas Gabriel, Endereço: Quadra Nicole Ribeiro, 5>,\n",
-      " <Pessoa: None, 153.264.780-80, Juliana, Endereço: Quadra Ana Lívia da Paz, 10>,\n",
-      " <Pessoa: None, 240.687.139-87, Vinicius, Endereço: Área Marcela Cavalcanti, 14>,\n",
-      " <Pessoa: None, 692.410.358-89, Rodrigo, Endereço: Lago Mariana Campos, 68>,\n",
-      " <Pessoa: None, 158.236.970-40, Emanuel, Endereço: Morro Pires, 39>]\n"
+      "[<Pessoa: None, 984.073.251-04, Stella, Endereço: [<Endereco: Passarela Carvalho, 143>]>,\n",
+      " <Pessoa: None, 971.302.654-34, Augusto, Endereço: [<Endereco: Trecho Silveira, 4>, <Endereco: Vila Pietra Cavalcanti, 5>, <Endereco: Trevo Martins, 640>]>,\n",
+      " <Pessoa: None, 920.354.817-32, Gabrielly, Endereço: [<Endereco: Lago Agatha Campos, 4>]>,\n",
+      " <Pessoa: None, 391.078.245-05, Paulo, Endereço: [<Endereco: Trecho de Duarte, 918>]>,\n",
+      " <Pessoa: None, 734.280.965-92, Agatha, Endereço: [<Endereco: Setor Enrico Almeida, 6>, <Endereco: Chácara de da Rocha, 67>]>,\n",
+      " <Pessoa: None, 107.284.596-20, Carlos Eduardo, Endereço: [<Endereco: Praça Viana, 92>]>,\n",
+      " <Pessoa: None, 203.954.618-98, Thales, Endereço: [<Endereco: Parque Joaquim da Mata, 83>, <Endereco: Lago de Gonçalves, 38>, <Endereco: Praça Maria Vitória Silveira, 28>]>,\n",
+      " <Pessoa: None, 047.856.391-48, Lavínia, Endereço: [<Endereco: Área de Azevedo, 52>, <Endereco: Morro Yago Cavalcanti, 31>]>,\n",
+      " <Pessoa: None, 035.264.871-62, Davi, Endereço: [<Endereco: Condomínio Pedro Miguel da Costa, 1>]>,\n",
+      " <Pessoa: None, 281.750.394-50, Antônio, Endereço: [<Endereco: Setor Matheus Novaes, 651>]>]\n"
      ]
     }
    ],
@@ -275,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "<Pessoa: 625f455401e31f0f776785f0, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>"
+       "<Pessoa: 625f4e6f1182b6d0d7a2dcb7, 984.073.251-04, Stella, Endereço: [<Endereco: Passarela Carvalho, 143>]>"
       ]
      },
      "execution_count": 9,
@@ -298,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f455401e31f0f776785f0')\n"
+      "ObjectId('625f4e6f1182b6d0d7a2dcb7')\n"
      ]
     }
    ],
@@ -315,15 +319,15 @@
     {
      "data": {
       "text/plain": [
-       "[<Pessoa: 625f455701e31f0f776785f1, 256.748.901-02, Leandro, Endereço: Trecho Enzo Ramos, 14>,\n",
-       " <Pessoa: 625f455701e31f0f776785f2, 462.971.308-50, Clarice, Endereço: Morro de Novaes, 31>,\n",
-       " <Pessoa: 625f455701e31f0f776785f3, 652.973.408-29, Lorena, Endereço: Ladeira Paulo da Cunha, 846>,\n",
-       " <Pessoa: 625f455701e31f0f776785f4, 167.803.925-02, Agatha, Endereço: Estrada de Cavalcanti, 6>,\n",
-       " <Pessoa: 625f455701e31f0f776785f5, 764.509.823-65, Lucas Gabriel, Endereço: Quadra Nicole Ribeiro, 5>,\n",
-       " <Pessoa: 625f455701e31f0f776785f6, 153.264.780-80, Juliana, Endereço: Quadra Ana Lívia da Paz, 10>,\n",
-       " <Pessoa: 625f455701e31f0f776785f7, 240.687.139-87, Vinicius, Endereço: Área Marcela Cavalcanti, 14>,\n",
-       " <Pessoa: 625f455701e31f0f776785f8, 692.410.358-89, Rodrigo, Endereço: Lago Mariana Campos, 68>,\n",
-       " <Pessoa: 625f455701e31f0f776785f9, 158.236.970-40, Emanuel, Endereço: Morro Pires, 39>]"
+       "[<Pessoa: 625f4e711182b6d0d7a2dcb8, 971.302.654-34, Augusto, Endereço: [<Endereco: Trecho Silveira, 4>, <Endereco: Vila Pietra Cavalcanti, 5>, <Endereco: Trevo Martins, 640>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcb9, 920.354.817-32, Gabrielly, Endereço: [<Endereco: Lago Agatha Campos, 4>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcba, 391.078.245-05, Paulo, Endereço: [<Endereco: Trecho de Duarte, 918>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcbb, 734.280.965-92, Agatha, Endereço: [<Endereco: Setor Enrico Almeida, 6>, <Endereco: Chácara de da Rocha, 67>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcbc, 107.284.596-20, Carlos Eduardo, Endereço: [<Endereco: Praça Viana, 92>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcbd, 203.954.618-98, Thales, Endereço: [<Endereco: Parque Joaquim da Mata, 83>, <Endereco: Lago de Gonçalves, 38>, <Endereco: Praça Maria Vitória Silveira, 28>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcbe, 047.856.391-48, Lavínia, Endereço: [<Endereco: Área de Azevedo, 52>, <Endereco: Morro Yago Cavalcanti, 31>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcbf, 035.264.871-62, Davi, Endereço: [<Endereco: Condomínio Pedro Miguel da Costa, 1>]>,\n",
+       " <Pessoa: 625f4e711182b6d0d7a2dcc0, 281.750.394-50, Antônio, Endereço: [<Endereco: Setor Matheus Novaes, 651>]>]"
       ]
      },
      "execution_count": 11,
@@ -362,16 +366,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ObjectId('625f455401e31f0f776785f0')\n",
-      "ObjectId('625f455701e31f0f776785f1')\n",
-      "ObjectId('625f455701e31f0f776785f2')\n",
-      "ObjectId('625f455701e31f0f776785f3')\n",
-      "ObjectId('625f455701e31f0f776785f4')\n",
-      "ObjectId('625f455701e31f0f776785f5')\n",
-      "ObjectId('625f455701e31f0f776785f6')\n",
-      "ObjectId('625f455701e31f0f776785f7')\n",
-      "ObjectId('625f455701e31f0f776785f8')\n",
-      "ObjectId('625f455701e31f0f776785f9')\n"
+      "ObjectId('625f4e6f1182b6d0d7a2dcb7')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcb8')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcb9')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcba')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcbb')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcbc')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcbd')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcbe')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcbf')\n",
+      "ObjectId('625f4e711182b6d0d7a2dcc0')\n"
      ]
     }
    ],
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "ead155d5",
    "metadata": {},
    "outputs": [
@@ -390,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Pessoa: 625f455401e31f0f776785f0, 716.803.954-75, Thiago, Endereço: Área Luiz Otávio Nunes, 80>\n"
+      "<Pessoa: 625f4e6f1182b6d0d7a2dcb7, 984.073.251-04, Stella, Endereço: [<Endereco: Passarela Carvalho, 143>]>\n"
      ]
     }
    ],
@@ -401,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "7987ce5a",
    "metadata": {},
    "outputs": [],
@@ -411,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "87cee784",
    "metadata": {},
    "outputs": [
@@ -421,13 +425,13 @@
        "[]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Pessoa.objects(id='625f455401e31f0f776785f0')"
+    "Pessoa.objects(id='625f4e6f1182b6d0d7a2dcb7')"
    ]
   }
  ],
